# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/bundlemanager/app_domain_verify/app_domain_verify.gni")
config("app_domain_verify_mgr_napi_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "${app_domain_verify_client_path}/include",
    "${app_domain_verify_common_path}/include",
    "${app_domain_verify_common_path}/include/zidl",
  ]
  configs = [ "//build/config/compiler:exceptions" ]
  ldflags = [ "-Wl,--exclude-libs=ALL" ]
  cflags = [
    "-fvisibility=hidden",
    "-fdata-sections",
    "-ffunction-sections",
    "-Os",
  ]

  cflags_cc = [
    "-fvisibility-inlines-hidden",
    "-Os",
  ]
}

ohos_shared_library("appdomainverify_napi") {
  sources = [
    "src/app_domain_verify_manager_napi.cpp",
    "src/native_module.cpp",
  ]
  public_configs = [ ":app_domain_verify_mgr_napi_config" ]
  deps = [
    "${app_domain_verify_client_path}:app_domain_verify_mgr_client",
    "${app_domain_verify_common_path}:app_domain_verify_common",
  ]
  defines = [ "API_EXPORT=__attribute__((visibility (\"default\")))" ]
  external_deps = [
    "ability_base:want",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "napi:ace_napi",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  relative_install_dir = "module/bundle"
  subsystem_name = "bundlemanager"
  part_name = "app_domain_verify"
}
