# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")
import("//foundation/bundlemanager/app_domain_verify/app_domain_verify.gni")
module_output_path = "app_domain_verify/app_domain_verify"

##############################fuzztest##########################################
ohos_fuzztest("AppDomainVerifyMgrServiceFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "."
  include_dirs = [
    "${app_domain_verify_client_path}/include",
    "${app_domain_verify_service_path}/include",
    "${app_domain_verify_service_path}/include/agent/core",
    "${app_domain_verify_service_path}/include/agent/zidl",
    "${app_domain_verify_service_path}/include/agent/bms",
    "${app_domain_verify_service_path}/include/manager/rdb",
    "${app_domain_verify_service_path}/include/manager/core",
    "${app_domain_verify_service_path}/include/manager/constant",
    "${app_domain_verify_service_path}/include/manager/zidl",
    "${app_domain_verify_service_path}/include/manager/permission",
    "${app_domain_verify_service_path}/include/manager/deferred_link",
    "${app_domain_verify_common_path}/include",
    "${app_domain_verify_frameworks_common_path}/include",
    "${app_domain_verify_frameworks_common_path}/include/utils",
    "${app_domain_verify_frameworks_extension_path}/include",
    "${app_domain_verify_frameworks_common_path}/include/dfx",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "app_domain_verify_mgr_service_fuzz_test.cpp" ]
  defines = [ "API_EXPORT=__attribute__((visibility (\"default\")))" ]
  deps = [
    "${app_domain_verify_client_path}:app_domain_verify_agent_client",
    "${app_domain_verify_client_path}:app_domain_verify_mgr_client",
    "${app_domain_verify_common_path}:app_domain_verify_common",
    "${app_domain_verify_frameworks_common_path}:app_domain_verify_frameworks_common",
    "${app_domain_verify_frameworks_extension_path}:app_domain_verify_extension_framework",
    "${app_domain_verify_frameworks_verifier_path}:app_domain_verify_agent_verifier",
    "${app_domain_verify_service_path}:app_domain_verify_agent_service",
    "${app_domain_verify_service_path}:app_domain_verify_mgr_service",
  ]
  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "curl:curl_shared",
    "eventhandler:libeventhandler",
    "ffrt:libffrt",
    "hicollie:libhicollie",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "ipc:ipc_core",
    "json:nlohmann_json_static",
    "netmanager_base:net_conn_manager_if",
    "netstack:http_client",
    "os_account:os_account_innerkits",
    "preferences:native_preferences",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}
