# Copyright (C) 2023-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/bundlemanager/app_domain_verify/app_domain_verify.gni")

config("module_private_config") {
  visibility = [ ":*" ]
  configs = [ "//build/config/compiler:exceptions" ]
  include_dirs = [
    "${app_domain_verify_client_path}/include",
    "${app_domain_verify_service_path}/include",
    "${app_domain_verify_service_path}/include/agent/core",
    "${app_domain_verify_service_path}/include/agent/zidl",
    "${app_domain_verify_service_path}/include/agent/bms",
    "${app_domain_verify_service_path}/include/manager/rdb",
    "${app_domain_verify_service_path}/include/manager/core",
    "${app_domain_verify_service_path}/include/manager/constant",
    "${app_domain_verify_service_path}/include/manager/zidl",
    "${app_domain_verify_service_path}/include/manager/permission",
    "${app_domain_verify_service_path}/include/manager/deferred_link",
    "${app_domain_verify_service_path}/include/manager/filter",
    "${app_domain_verify_common_path}/include",
    "${app_domain_verify_frameworks_common_path}/include",
    "${app_domain_verify_frameworks_common_path}/include/utils",
    "${app_domain_verify_frameworks_extension_path}/include",
    "${app_domain_verify_test_path}/mock/include",
    "${app_domain_verify_frameworks_common_path}/include/dfx",
    "${app_domain_verify_frameworks_app_details_rdb_path}/include",
  ]
}

module_output_path = "app_domain_verify/appdomainverify"
ohos_unittest("app_domain_verify_mgr_service_test") {
  module_out_path = module_output_path

  sources = [
    "${app_domain_verify_frameworks_app_details_rdb_path}/src/app_details_meta_item.cpp",
    "${app_domain_verify_frameworks_app_details_rdb_path}/src/app_details_rdb_data_manager.cpp",
    "${app_domain_verify_frameworks_app_details_rdb_path}/src/app_details_rdb_item.cpp",
    "${app_domain_verify_frameworks_app_details_rdb_path}/src/app_details_rdb_open_callback.cpp",
    "${app_domain_verify_service_path}/src/manager/core/app_details_data_mgr.cpp",
    "${app_domain_verify_service_path}/src/manager/core/app_domain_verify_data_mgr.cpp",
    "${app_domain_verify_service_path}/src/manager/core/app_domain_verify_mgr_service.cpp",
    "${app_domain_verify_service_path}/src/manager/filter/app_details_filter.cpp",
    "${app_domain_verify_service_path}/src/manager/rdb/app_domain_verify_rdb_data_manager.cpp",
    "${app_domain_verify_service_path}/src/manager/rdb/app_domain_verify_rdb_open_callback.cpp",
    "${app_domain_verify_service_path}/src/manager/rdb/rdb_migrate_mgr.cpp",
    "${app_domain_verify_service_path}/src/manager/zidl/app_domain_verify_mgr_service_proxy.cpp",
    "${app_domain_verify_service_path}/src/manager/zidl/app_domain_verify_mgr_service_stub.cpp",
    "${app_domain_verify_test_path}/mock/src/mock_access_token.cpp",
    "${app_domain_verify_test_path}/mock/src/mock_bundle_manager.cpp",
    "${app_domain_verify_test_path}/mock/src/mock_deferred_link_mgr.cpp",
    "${app_domain_verify_test_path}/mock/src/mock_os_account_manager.cpp",
    "${app_domain_verify_test_path}/mock/src/mock_permission_mgr.cpp",
    "${app_domain_verify_test_path}/mock/src/mock_service_registry.cpp",
    "${app_domain_verify_test_path}/mock/src/mock_system_ability.cpp",
    "${app_domain_verify_test_path}/mock/src/mock_system_ability_ondemand_reason.cpp",
    "app_domain_verify_mgr_service_test.cpp",
  ]
  configs = [ ":module_private_config" ]
  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken_shared",
    "access_token:libtokenid_sdk",
    "access_token:libtokensetproc_shared",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "cJSON:cjson",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "ffrt:libffrt",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "image_framework:image_native",
    "init:libbegetutil",
    "ipc:ipc_core",
    "netstack:http_client",
    "os_account:os_account_innerkits",
    "preferences:native_preferences",
    "relational_store:native_rdb",
    "safwk:system_ability_fwk",
    "samgr:dynamic_cache",
    "samgr:samgr_common",
    "samgr:samgr_proxy",
    "selinux_adapter:librestorecon",
  ]

  defines = [ "API_EXPORT=__attribute__((visibility (\"default\")))" ]
  deps = [
    "${app_domain_verify_client_path}:app_domain_verify_agent_client",
    "${app_domain_verify_client_path}:app_domain_verify_mgr_client",
    "${app_domain_verify_common_path}:app_domain_verify_common",
    "${app_domain_verify_frameworks_common_path}:app_domain_verify_frameworks_common",
    "${app_domain_verify_frameworks_common_path}:app_domain_verify_frameworks_common",
    "${app_domain_verify_frameworks_extension_path}:app_domain_verify_extension_framework",
    "${app_domain_verify_frameworks_verifier_path}:app_domain_verify_agent_verifier",
  ]
}
